@startuml

'class Ialon
class PlayerState
interface ChunkRepository
interface ChunkMeshGenerator
interface ChunkGenerator
interface TerrainGenerator extends ChunkGenerator
class FlatTerrainGenerator implements TerrainGenerator
class NoiseTerrainGenerator implements TerrainGenerator
class EmptyGenerator implements TerrainGenerator
class FacesMeshGenerator implements ChunkMeshGenerator
class ZipFileRepository implements ChunkRepository
class FileRepository implements ChunkRepository

PlayerState --> BlockSelectionState
PlayerState --> WorldManager

ChunkManager --> ChunkCache
ChunkManager --> ChunkRepository
ChunkManager --> ChunkGenerator
ChunkManager --> ChunkMeshGenerator

class ChunkLiquidManager {
Queue liquidBfsQueue
Queue liquidRemovalBfsQueue
void step()
}
WorldManager --> ChunkManager
WorldManager --> ChunkLightManager
WorldManager --> ChunkLiquidManager

ChunkLiquidManager --> ChunkManager
ChunkLiquidManagerState --> ChunkLiquidManager
ChunkLightManager --> ChunkManager

ChunkPager --> ChunkManager
ChunkPagerState --> ChunkPager
PhysicsChunkPager --> ChunkManager
PhysicsChunkPagerState --> PhysicsChunkPager

'Ialon --> PlayerState
'Ialon --> ChunkPagerState
'Ialon --> BlockSelectionState
'Ialon --> ChunkLiquidManagerState
'Ialon --> PhysicsChunkPagerState

@enduml